--- a/level1/Hackaton 2019/friends.html
+++ b/level1/Hackaton 2019/friends.html
@@ -21,35 +21,9 @@
           <section>
               <p class="friendstext">
                   <br>
-                  Ayyyyyy suck mah dick
-                  <br>
-                  <br>
-                  <br>
-                  <br>
-                  <br>
-                  <br>
-                  <br>
-                  <br>
-                  <br>
-                  <br>
-                  <br>
-                  <br>
-                  <br>
-                  <br>
-                  <br>
-                  <br>
-                  <br>
-                  <br>
-                  <br>
-                  <br>
-                  <br>
-                  <br>
-                  <br>
-                  <br>
-                  <br>
+                  <img src="img/friends.png" alt="Friends" width="500">
               </p>
-
-          <div class="sidebar">
+            <div class="sidebar">
               <a href="index.html"><i class="fa fa-fw fa-home"></i></a>
               <a href="friends.html"><i class="fa fa-fw fa-user"></i> </a>
               <a href="login.php"><i class="fa fa-fw fa-envelope"></i></a>
