--- a/level1/Hackaton 2019/index.html
+++ b/level1/Hackaton 2019/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>random name</title>
+    <title>fake</title>
     <meta name="description" content="a website about me">
     <meta name="keywords" content="me, social media">
     <meta name="author" content="name comes here">
