--- a/level2/index.html
+++ b/level2/index.html
@@ -1,33 +1,69 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html>
+  <head>
     <meta charset="UTF-8">
+    <title>random name</title>
+    <meta name="description" content="a website about me">
+    <meta name="keywords" content="me, social media">
+    <meta name="author" content="name comes here">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
-    <title>Document</title>
-</head>
-    <body>
-        <div class="container">
-            <div class="main">
-                <h2>Javascript Login Form Validation</h2>
-                <form id="form_id" method="post" name="myform">
-                    <label>User Name :</label>
-                    <input type="text" name="username" id="username"/>
-                    <label>Password :</label>
-                    <input type="password" name="password" id="password"/>
-                    <input type="button" value="Login" id="submit" onclick="validate()"/>
-                </form>
-                <span><b class="note">Note : </b>For this demo use following username and password. <br/><b class="valid">User Name : Formget<br/>Password : formget#123</b></span>
-            </div>    
+  </head>
+      <header>
+        <div class="logo">
+          <a href="index.html">
+            <img alt="logo" src="img/logo.png" width="600">
+          </a>
         </div>
-    <!-- <img src="the_dog.png" alt="Henk's hond" width="250px"> -->
-    <div class="sidebar">
-            <a href="#home"><i class="fa fa-fw fa-home"></i></a>
-            <a href="#clients"><i class="fa fa-fw fa-user"></i> </a>
-            <a href="#contact"><i class="fa fa-fw fa-envelope"></i></a>
-          </div>
-    </body>
-    <script src="script/script.js"></script>
+      </header>
+      <body>
+          <section>
+              <img class="portrait" src="img/annemarie.png" width="400">
+              <p class="portraittext">
+                  <br>Goeie dag, ik ben Annemarie Schoonbrood, ik ben 56 jaar vrolijk getrouwd,  
+                  <br>ik deel niet veel over mijzelf op het internet,
+                  <br>ik hou wel van een wijntje en ik ben erg trots op mijn dochter,
+                  <br>21 jaar ze word een getalanteerde vrouw.
+                  <br>Mijn favoriete tekening is mijn tatoo die ik heb laten zetten
+                  <br>in mijn tiener jaren, het staat er nu al jaren en ik wil echt
+                  <br>niet zonder en bovendien vind mijn man het leuk dus laat ik
+                  <br>het maar staan.
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+              </p>
+          </section>
+          <section class="row">
+            <div class="column">
+                <iframe src="" width="500" height="531" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+            </div>
+
+          </section>
+          <div class="sidebar">
+              <a href="index.html"><i class="fa fa-fw fa-home"></i></a>
+              <a href="friends.html"><i class="fa fa-fw fa-user"></i> </a>
+              <a href="login.php"><i class="fa fa-fw fa-envelope"></i></a>
+            </div>
+      </body>
+      <footer class="banner">
+        <img alt="banner" src="img/banner.jpg" width="1829">
+      </footer>
+   </div>
 </html>
