--- a/start/index.html
+++ b/start/index.html
@@ -5,29 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
-    <title>Document</title>
+    <title>Start of the Game</title>
 </head>
     <body>
-        <div class="container">
-            <div class="main">
-                <h2>Javascript Login Form Validation</h2>
-                <form id="form_id" method="post" name="myform">
-                    <label>User Name :</label>
-                    <input type="text" name="username" id="username"/>
-                    <label>Password :</label>
-                    <input type="password" name="password" id="password"/>
-                    <input type="button" value="Login" id="submit" onclick="validate()"/>
-                </form>
-                <span><b class="note">Note : </b>For this demo use following username and password. <br/><b class="valid">User Name : Formget<br/>Password : formget#123</b></span>
-            </div>    
-        </div>
-    <!-- <img src="the_dog.png" alt="Henk's hond" width="250px"> -->
-    <div class="sidebar">
-            <a href="#home"><i class="fa fa-fw fa-home"></i></a>
-            <a href="#clients"><i class="fa fa-fw fa-user"></i> </a>
-            <a href="#contact"><i class="fa fa-fw fa-envelope"></i></a>
-          </div>
+        <h1>Someone has taken over accounts from people you know.<br>
+        If you want to get their accounts back you have to crack their passwords.<br>
+        Don't worry you'll get hints, examples and ofcourse a tutorial,<br>
+        just so that you can succeed in helping the people you know.</h1><br><br>
+        <h3>Current amount of levels = 3</h3>
+        <h3>Please click the button below to start you journey</h3>
+        <br>
+        <br>
+        <button onclick="GoToLink()">Start Your Journey</button>
     </body>
     <script src="script/script.js"></script>
 </html>
