--- a/start/index.html
+++ b/start/index.html
@@ -16,7 +16,23 @@
         <h3>Please click the button below to start you journey</h3>
         <br>
         <br>
-        <button onclick="GoToLink()">Start Your Journey</button>
+        <button onclick="OpenGame()">Start Your Journey</button>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <h4>Tips om wachtwoorden te raden:<br>
+                de naam van de gebruiker<br>
+                de namen van iemands broers en zussen.<br>
+                de naam van iemands huidige of favoriete (huis)dier.<br>
+                iemand zijn/haar geboorte datum.<br>
+                het adres kan voor komen als wachtwoord van een gebruiker.<br>
+                meestal begint het wachtwoord met een hoofdletter,<br>
+                let goed op wat de gebruiker heeft gezegd/gepost</h4>
     </body>
     <script src="script/script.js"></script>
 </html>
