--- a/start/index.html
+++ b/start/index.html
@@ -8,31 +8,25 @@
     <title>Start of the Game</title>
 </head>
     <body>
-        <h1>Someone has taken over accounts from people you know.<br>
-        If you want to get their accounts back you have to crack their passwords.<br>
-        Don't worry you'll get hints, examples and ofcourse a tutorial,<br>
-        just so that you can succeed in helping the people you know.</h1><br><br>
-        <h3>Current amount of levels = 3</h3>
-        <h3>Please click the button below to start you journey</h3>
+        <h1>Iemand heeft de accounts van mensen die je kent over genomen.<br>
+        Als je hun accounts terug wilt halen kan dat alleen door hun accounts te hacken.<br>
+        Maak je geen zorgen je krijgt tips, een tutorial en voorbeelden<br>
+        <br>
+        <h3>Klik op een van de knoppen hier onder om een difficulty te selecteren</h3>
         <br>
         <br>
-        <button onclick="OpenGame()">Start Your Journey</button>
-        <br>
-        <br>
-        <br>
-        <br>
+        <button onclick="OpenJasmine()" class="left">Easy</button>
+        <button onclick="OpenAnnemarie()">Medium</button>
+        <button onclick="OpenHenk()"class="right">Hard</button>
         <br>
         <br>
         <br>
         <br>
-        <h4>Tips om wachtwoorden te raden:<br>
-                de naam van de gebruiker<br>
-                de namen van iemands broers en zussen.<br>
-                de naam van iemands huidige of favoriete (huis)dier.<br>
-                iemand zijn/haar geboorte datum.<br>
-                het adres kan voor komen als wachtwoord van een gebruiker.<br>
-                meestal begint het wachtwoord met een hoofdletter,<br>
-                let goed op wat de gebruiker heeft gezegd/gepost</h4>
+        <br>
+        <br>
+        <br>
+        <br>
+
     </body>
     <script src="script/script.js"></script>
 </html>
