--- a/level1/Hackaton 2019/successannemarie.html
+++ b/level1/Hackaton 2019/successannemarie.html
@@ -31,7 +31,7 @@
                   <br>
                   <br>
                   <br>
-                  <a herf="29280.hosts2.ma-cloud.nl/bewijzenmap/periode1.1/hackaton/hackaton2019/start">treug naar home</a>
+                  <a herf="../start/index.html">treug naar home</a>
               </p>
             <div class="sidebar">
               <a href="index.html"><i class="fa fa-fw fa-home"></i></a>
